three andpoints
